package com.globo.assinatura.shared.outbox;

import jakarta.persistence.Entity;
import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;
import jakarta.persistence.Id;
import jakarta.persistence.Table;
import java.time.Instant;
import java.util.UUID;
import org.hibernate.annotations.JdbcTypeCode;
import org.hibernate.type.SqlTypes;

/**
 * Evento persistido na outbox aguardando publicacao no Kafka.
 *
 * <p>Nasce em {@link OutboxStatus#PENDENTE} e transita para {@link OutboxStatus#PUBLICADO} quando o
 * Kafka confirma o envio, ou para {@link OutboxStatus#FALHA} apos esgotar as tentativas (DLQ
 * persistida). O {@code payload} carrega o evento serializado em JSON.
 */
@Entity
@Table(name = "outbox")
public class OutboxEvent {

  @Id private UUID eventId;

  private String aggregateType;
  private UUID aggregateId;
  private String eventType;

  @JdbcTypeCode(SqlTypes.JSON)
  private String payload;

  @Enumerated(EnumType.STRING)
  private OutboxStatus status;

  private short tentativas;
  private Instant proximaTentativaEm;
  private Instant criadoEm;
  private Instant publicadoEm;
  private Instant falhouEm;
  private String ultimoErro;
  private short ciclosRecuperacao;

  /** Construtor sem argumentos exigido pelo provedor JPA. */
  protected OutboxEvent() {}

  private OutboxEvent(
      UUID eventId,
      String aggregateType,
      UUID aggregateId,
      String eventType,
      String payload,
      Instant criadoEm) {
    this.eventId = eventId;
    this.aggregateType = aggregateType;
    this.aggregateId = aggregateId;
    this.eventType = eventType;
    this.payload = payload;
    this.status = OutboxStatus.PENDENTE;
    this.criadoEm = criadoEm;
    this.proximaTentativaEm = criadoEm;
  }

  /**
   * Cria um evento pendente para publicacao.
   *
   * @param eventId identificador unico do evento para deduplicacao no consumidor
   * @param aggregateType tipo do agregado de origem
   * @param aggregateId identificador publico do agregado de origem
   * @param eventType tipo do evento
   * @param payload evento serializado em JSON
   * @return evento pendente
   */
  public static OutboxEvent criar(
      UUID eventId, String aggregateType, UUID aggregateId, String eventType, String payload) {
    return new OutboxEvent(eventId, aggregateType, aggregateId, eventType, payload, Instant.now());
  }

  /**
   * Marca o evento como publicado apos confirmacao do Kafka.
   *
   * @param publicadoEm instante da confirmacao
   */
  public void marcarPublicado(Instant publicadoEm) {
    this.status = OutboxStatus.PUBLICADO;
    this.publicadoEm = publicadoEm;
  }

  /**
   * Registra uma falha de publicacao mantendo o evento pendente para a proxima tentativa.
   *
   * <p>Incrementa o contador de tentativas, registra a mensagem de erro e agenda a proxima
   * tentativa.
   *
   * @param erro mensagem do erro ocorrido
   * @param proximaTentativa instante agendado para a proxima tentativa
   */
  public void registrarFalha(String erro, Instant proximaTentativa) {
    this.tentativas++;
    this.ultimoErro = erro;
    this.proximaTentativaEm = proximaTentativa;
  }

  /**
   * Retorna o numero de tentativas de publicacao realizadas.
   *
   * @return contador de tentativas
   */
  public int getTentativas() {
    return tentativas;
  }

  /**
   * Marca o evento como falha definitiva apos esgotar as tentativas.
   *
   * <p>O evento permanece persistido como DLQ para reprocessamento manual, sem retry automatico.
   *
   * @param erro mensagem do erro que esgotou as tentativas
   * @param falhouEm instante em que as tentativas se esgotaram
   */
  public void marcarFalha(String erro, Instant falhouEm) {
    this.status = OutboxStatus.FALHA;
    this.ultimoErro = erro;
    this.falhouEm = falhouEm;
  }

  /**
   * Recupera automaticamente um evento em {@link OutboxStatus#FALHA} apos o timeout da DLQ,
   * iniciando um novo ciclo de tentativas de publicacao.
   *
   * <p>Zera o contador de tentativas para a politica de retry rodar completa novamente e incrementa
   * o contador de ciclos de recuperacao.
   *
   * @param agora instante da recuperacao, usado como proxima tentativa
   */
  public void recuperarParaRetentativa(Instant agora) {
    this.status = OutboxStatus.RETENTATIVA_DLQ;
    this.ciclosRecuperacao++;
    this.tentativas = 0;
    this.proximaTentativaEm = agora;
  }

  /**
   * Retorna o identificador unico do evento.
   *
   * @return identificador do evento
   */
  public UUID getEventId() {
    return eventId;
  }

  /**
   * Retorna o tipo do agregado relacionado ao evento.
   *
   * @return tipo do agregado
   */
  public String getAggregateType() {
    return aggregateType;
  }

  /**
   * Retorna o identificador do agregado relacionado ao evento.
   *
   * @return identificador do agregado
   */
  public UUID getAggregateId() {
    return aggregateId;
  }

  /**
   * Retorna o tipo do evento.
   *
   * @return tipo do evento
   */
  public String getEventType() {
    return eventType;
  }

  /**
   * Retorna o payload serializado do evento.
   *
   * @return payload do evento
   */
  public String getPayload() {
    return payload;
  }

  /**
   * Retorna o status atual do evento na outbox.
   *
   * @return status do evento
   */
  public OutboxStatus getStatus() {
    return status;
  }

  /**
   * Retorna o instante previsto para a proxima tentativa de publicacao.
   *
   * @return instante da proxima tentativa
   */
  public Instant getProximaTentativaEm() {
    return proximaTentativaEm;
  }

  /**
   * Retorna o instante de criacao do evento.
   *
   * @return instante de criacao
   */
  public Instant getCriadoEm() {
    return criadoEm;
  }

  /**
   * Retorna o instante em que o evento foi publicado.
   *
   * @return instante de publicacao, ou {@code null} enquanto nao publicado
   */
  public Instant getPublicadoEm() {
    return publicadoEm;
  }

  /**
   * Retorna o instante em que a publicacao falhou definitivamente.
   *
   * @return instante da falha definitiva, ou {@code null} enquanto nao esgotada
   */
  public Instant getFalhouEm() {
    return falhouEm;
  }

  /**
   * Retorna a mensagem do ultimo erro de publicacao.
   *
   * @return mensagem do ultimo erro, ou {@code null} enquanto nao houver falha
   */
  public String getUltimoErro() {
    return ultimoErro;
  }

  /**
   * Retorna o numero de ciclos de recuperacao automatica ja realizados.
   *
   * @return contador de ciclos de recuperacao
   */
  public int getCiclosRecuperacao() {
    return ciclosRecuperacao;
  }
}
